feat: 增强压缩参数配置和优化构建流程
新功能:
- 分辨率设置: 支持原始/4K/2K/1080p/720p/480p/360p预设
- 帧率设置: 支持原始帧率或指定24/25/30/50/60 FPS
- 默认值: 分辨率和帧率都默认保持原视频一致
- UI改进: 清晰的下拉菜单,附带说明文字

构建优化:
- Android CI/CD: 移除Debug构建,仅输出Release APK(节省50%构建时间)
- iOS文件共享: 启用UIFileSharingEnabled,可通过文件App访问输出视频
- iOS文档浏览: 支持LSSupportsOpeningDocumentsInPlace,便于管理输出文件

技术细节:
- CompressionSettings新增resolution和frameRate字段
- 完整的JSON序列化支持
- FFmpeg命令预览包含-s和-r参数
- 修复Flutter 3.35弃用警告(value -> initialValue)

--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -49,5 +49,11 @@
 	<string>需要访问照片库以选择要压缩的视频文件</string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>需要访问照片库以保存压缩后的视频</string>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportsOpeningDocumentsInPlace</key>
+	<true/>
+	<key>UISupportsDocumentBrowser</key>
+	<true/>
 </dict>
 </plist>
