--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Video compression - using actively maintained alternatives
-  video_compress: ^3.1.4
+  # FFmpeg - Full-GPL version with all features
+  ffmpeg_kit_flutter_new: ^4.1.0
   
   # State management
   provider: ^6.1.2
@@ -48,8 +48,8 @@ dependencies:
   # Permissions
   permission_handler: ^11.4.0
   
-  # Local storage
-  shared_preferences: ^2.5.3
+  # Storage for settings
+  shared_preferences: ^2.3.3
 
 dev_dependencies:
   flutter_test:
