feat(android): 更新权限请求逻辑，适配 Android 12 和 13，添加权限请求界面

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,9 @@ dependencies:
   # Permissions
   permission_handler: ^11.4.0
   
+  # Device info
+  device_info_plus: ^11.2.0
+  
   # Storage for settings
   shared_preferences: ^2.3.3
 
