--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Video compression - using actively maintained alternatives
-  video_compress: ^3.1.4
+  # Video compression - using flutter_ffmpeg for full control
+  flutter_ffmpeg: ^0.4.2
   
   # State management
   provider: ^6.1.2
