feat: 更新构建工作流以支持flutter_ffmpeg分支

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,7 +2,7 @@ name: Build Mobile Apps
 
 on:
   push:
-    branches: [ main, develop ]
+    branches: [ main, develop, flutter_ffmpeg]
   pull_request:
     branches: [ main ]
   workflow_dispatch:
