feat: migrate to ffmpeg_kit_flutter for H.265 video compression
- Replace video_compress with ffmpeg_kit_flutter_video for full FFmpeg control
- Rewrite VideoCompressionService to use FFmpeg command-line API
- Support all compression settings: CRF, preset, resolution, framerate, bitrate
- Implement progress tracking based on video duration using FFprobe
- Add CompressionSettings parameter to compression workflow
- Configure Android SDK and build environment
- Add comprehensive migration documentation

Known issue: ffmpeg-kit Maven dependency resolution needs CI/CD build

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,8 +31,8 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Video compression - using flutter_ffmpeg for full control
-  flutter_ffmpeg: ^0.4.2
+  # Video compression - using ffmpeg_kit_flutter with video package (includes H.265)
+  ffmpeg_kit_flutter_video: ^6.0.3
   
   # State management
   provider: ^6.1.2
