feat: integrate local ffmpeg_kit_flutter_new plugin
- Replace ffmpeg_kit_flutter_video with local ffmpeg_kit_flutter_new
- Update all imports from ffmpeg_kit_flutter_video to ffmpeg_kit_flutter_new
- Upgrade Java compatibility from 11 to 17 to match plugin requirements
- Add complete ffmpeg_kit_flutter local plugin directory as regular files
- Successfully built APK (310MB) with full FFmpeg support
- Tested local compilation, ready for CI/CD

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,9 @@ dependencies:
   flutter:
     sdk: flutter
   
-  # Video compression - using ffmpeg_kit_flutter with video package (includes H.265)
-  # Using 5.1 for Maven compatibility
-  ffmpeg_kit_flutter_video: ^5.1.0
+  # Video compression - using local ffmpeg_kit_flutter with video package (includes H.265)
+  ffmpeg_kit_flutter_new:
+    path: ./ffmpeg_kit_flutter
   
   # State management
   provider: ^6.1.2
